<resources>
    <string name="app_name">TransactionalStore</string>
    <string name="set_name">Set</string>
    <string name="key_hidden">"key"</string>
    <string name="value_hidden">"value"</string>
    <string name="get_name">"Get"</string>
    <string name="delete_name">"Delete"</string>
    <string name="count_name">"Count"</string>
    <string name="begin_name">"Begin"</string>
    <string name="commit_name">"Commit"</string>
    <string name="rollback_name">"Rollback"</string>
</resources>